--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: "Figtree", sans-reif;
 }
 
 /* set the card style using Flexbox */
@@ -25,7 +26,7 @@ body {
   display: flex;
   flex-direction: column; /*arrange items in a column*/
   padding: 10px;
-  padding-top:20px;
+  padding-top: 20px;
   padding-bottom: 20px;
   justify-content: space-evenly; /*align vertically */
   align-items: center;
@@ -34,14 +35,12 @@ body {
 }
 
 /* make rounded corner for the svg graphics */
-.rounded-rect {
-  /* width: 100%; */
+img {
   border-radius: 10px;
 }
 
 /* set the text style "learning" */
 .label {
-  font-family: "Figtree", sans-reif;
   font-weight: 800;
   padding-top: 15px;
   padding-bottom: 15px;
@@ -55,13 +54,11 @@ body {
 
 /* set the date font */
 .date {
-  font-family: "Figtree", sans-serif;
   font-weight: 500;
 }
 
 /* set h1 style */
 h1 {
-  font-family: "Figtree", sans-serif;
   font-weight: 800;
   align-self: first baseline;
   margin: 10px;
@@ -69,7 +66,6 @@ h1 {
 
 /* set the main paragraph style */
 p {
-  font-family: "Figtree", sans-serif;
   font-weight: 500;
   margin-left: 10px;
 }
@@ -79,12 +75,10 @@ footer {
   display: flex;
   flex-direction: row;
   align-self: first baseline;
-  /* justify-content: space-between; */
   align-items: center;
 }
 
 .author {
-  font-family: "Figtree", sans-serif;
   font-weight: 800;
   margin: 10px;
 }
